--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  height: 100%;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -23,11 +24,11 @@ a:hover {
 }
 
 body {
-  margin: 0 auto;
+  display: flex;
+  scrollbar-gutter: stable;
+  margin: 0;
   display: flex;
   place-items: center;
-  width: 100vw;
-  min-height: 100vh;
 }
 
 h1 {
@@ -47,22 +48,9 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: black;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
